tests/lean/hole_in_fn.lean.expected.out
hole_in_fn.lean:7:13: error: don't know how to synthesize placeholder
state:
n : ℕ
⊢ ℕ
